Changes for 1.4.6:

 - [ZBX-339] fixes problem in frontend with clearing history for text items (Sasha) 
 - [ZBX-44] added timeout handler for processing net.tcp.* items (Sasha)
 - [ZBX-356] fixed possible server crash for non *log() items with type 'log' (Sasha)
 - [ZBX-354] added support of new parameter sec|#num for str(),regexp() and iregexp() (Sasha)
 - [ZBX-351] added support of floating point values w/o zero (.12) (Sasha)
 - [ZBX-350] fixed processing in_condition under Oracle (Sasha)
 - [ZBX-348] fixed incorrect processing of large integer values for {ITEM.LASTVALUE} (Alexei)
 - [ZBX-337] added Oracle upgrade scripts (Sasha) 
 - [ZBX-301] fixes some typos (Artem)
 - [ZBX-310] fixes for PGSQL (Artem)
 - [ZBX-336] fixed vtext.php (Artem)

Changes for 1.4.5:

 - [ZBX-295] fixed processing of null values under Oracle. Thanks to Max Lapan. (Sasha)
 - [ZBX-340] Oracle related fixes. Thanks to Max Lapan. (Sasha)
 - [ZBX-294,ZBX-296] Oracle related fixes. Thanks to Max Lapan. (Sasha)
 - [ZBX-343] fixed possible hang of server trapper process (Alexei)
 - [ZBX-341] fixed compilation problem under Tru64/OSF (Alexei)
 - [ZBX-338] png files for images_oracle.sql script (Sasha)
 - [ZBX-322] fixed possible incorrect autodiscovery (Sasha)
 - [ZBX-315] fixed server irregulary stop on OpenBSD (Sasha)
 - [ZBX-206] fixed case sensitive hosts sorting (Artem)
 - [ZBX-313] fixed problem with sqlite3 sepamhore (Sasha)
 - [ZBX-292] fixed negative values in availability report issue (Artem)
 - [ZBX-182] fixed processing of icmpping if dns name cannot be resolved (Sasha)
 - [HAN-2] improved speed on coping triggers to host (Artem)
 - [ZBX-290] fixed possible server crash if host dns name is unknown (Sasha)
 - [ZBX-288] fixed compilation of the agent under Solaris 2.6 (Alexei)
 - [ZBX-287] fixed compilation under FreeBSD 4.1 with older GCC (Alexei)
 - [ZBX-283] fixed SQL statement where INTEGER exceeds allowed range (Artem)